@@ -68,6 +68,7 @@ namespace IECoreMaya
 class ProceduralHolder : public ParameterisedHolderComponentShape
 {
 	friend class ProceduralHolderUI;
+	friend class ProceduralHolderComponentBoundIterator;
 
 	public :
 
@@ -132,12 +133,20 @@ class ProceduralHolder : public ParameterisedHolderComponentShape
 		static MObject aComponentBoundCenterX;
 		static MObject aComponentBoundCenterY;
 		static MObject aComponentBoundCenterZ;
-
+		
+		/// This method is overridden to supply a geometry iterator, which maya uses to work out
+		/// the bounding boxes of the components you've selected in the viewport
+		virtual MPxGeometryIterator* geometryIteratorSetup( MObjectArray&, MObject&, bool );
+		
+		/// This is a blank override, to stop maya offering you a rotation manipulator for the
+		/// procedural components, then crashing when you try and use it (maya 2013)
+		virtual void transformUsing( const MMatrix &mat, const MObjectArray &componentList, MPxSurfaceShape::MVertexCachingMode cachingMode, MPointArray *pointCache );
+		
 	private :
 
 		mutable bool m_boundDirty;
 		mutable MBoundingBox m_bound;
-
+		
 		bool m_sceneDirty;
 		IECoreGL::ScenePtr m_scene;
 		IECoreGL::RendererPtr m_lastRenderer;
@@ -146,14 +155,19 @@ class ProceduralHolder : public ParameterisedHolderComponentShape
 		/// struct with named fields instead of the hard to understand std::pairs.		
 		typedef std::map<IECore::InternedString,  std::pair< unsigned int, IECoreGL::GroupPtr > > ComponentsMap;
 		typedef std::map< int, std::set< std::pair< std::string, IECoreGL::GroupPtr > > > ComponentToGroupMap;
+		typedef std::map< int, Imath::Box3f > ComponentToBoundMap;
 		typedef std::map<IECore::InternedString, Imath::M44f> ComponentTransformsMap;
-
+		
 		void buildComponents();
 		void buildComponents( IECoreGL::ConstNameStateComponentPtr nameState, IECoreGL::GroupPtr group, const Imath::M44f &parentTransform );
-
+		
+		Imath::Box3f componentBound( int idx ) const;
+		
 		ComponentsMap m_componentsMap;
 		ComponentToGroupMap m_componentToGroupMap;
 		ComponentTransformsMap m_componentTransforms;
+
+		mutable ComponentToBoundMap m_componentToBoundMap;
 
 };
 
